--- a/app/src/main/res/layout/rv_item_post_detail_place.xml
+++ b/app/src/main/res/layout/rv_item_post_detail_place.xml
@@ -46,12 +46,28 @@
         app:layout_constraintTop_toBottomOf="@id/ly_place_name"
         tools:visibility="visible">
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/vp_place_image"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/vp_place_image"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="horizontal"
+                app:layout_constraintDimensionRatio="H,1:1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/tv_place_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            />
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="4dp"
+            android:textSize="18sp"
+            tools:text="00도 00시 00구 0000로 00" />
 
         <TextView
             android:id="@+id/tv_place_detail_content"
