--- a/app/src/main/res/layout/activity_add_place.xml
+++ b/app/src/main/res/layout/activity_add_place.xml
@@ -50,6 +50,7 @@
                         android:id="@+id/spinner_place_category"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:padding="4dp"
                         tools:listitem="@layout/spinner_item_place_category" />
                 </LinearLayout>
             </LinearLayout>
