--- a/app/src/main/res/layout/spinner_item_place_category.xml
+++ b/app/src/main/res/layout/spinner_item_place_category.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:paddingHorizontal="8dp"
     android:paddingVertical="4dp"
     android:textSize="18sp"
