--- a/app/src/main/res/layout/rv_item_search_place.xml
+++ b/app/src/main/res/layout/rv_item_search_place.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/ly_place_pin"
+        app:layout_constraintEnd_toStartOf="@id/ly_reading_glasses"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -43,7 +43,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/ly_place_pin"
+        android:id="@+id/ly_reading_glasses"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_circle"
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:src="@drawable/ic_pin_24" />
+            android:src="@drawable/ic_search_24" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
