--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="gray_dark">#707070</color>
     <color name="left_balloon">#7AC31F</color>
     <color name="right_balloon">#1F7AC3</color>
+    <color name="chip_select">#0085FF</color>
+    <color name="chip_default">#E6E0E9</color>
 </resources>
