--- a/app/src/main/res/layout/rv_item_place.xml
+++ b/app/src/main/res/layout/rv_item_place.xml
@@ -26,6 +26,17 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:targetApi="s" />
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:src="@drawable/image_gradient"
+            app:layout_constraintDimensionRatio="360:150"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_item_image"
+            app:layout_constraintEnd_toEndOf="@+id/iv_item_image"
+            app:layout_constraintStart_toStartOf="@+id/iv_item_image"
+            app:layout_constraintTop_toTopOf="@+id/iv_item_image" />
+
         <TextView
             android:id="@+id/tv_item_name"
             android:layout_width="0dp"
