--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="gray">#A5A5A5</color>
     <color name="gray_dark">#707070</color>
     <color name="rain_info">#407CC5</color>
+    <color name="left_balloon">#AAF4BA</color>
+    <color name="right_balloon">#8EB9EF</color>
 
 </resources>
