--- a/app/src/main/res/layout/activity_on_boding.xml
+++ b/app/src/main/res/layout/activity_on_boding.xml
@@ -63,4 +63,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btn_signup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="회원가입"
+        app:layout_constraintEnd_toEndOf="@+id/btn_Unlink"
+        app:layout_constraintStart_toStartOf="@+id/btn_Unlink"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Unlink" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
